--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -2,5 +2,9 @@
 	background-color: #2dbfd8;
 }
 .jumbotron{
-	padding: 10%;
+	padding: 20px;
+}
+.jumbotron h3{
+	color: white;
+	font-weight: 300;
 }
