--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -2,9 +2,9 @@
 	background-color: #2dbfd8;
 }
 .jumbotron{
-	padding: 20px;
+	padding: 20%;
 }
 .jumbotron h3{
 	color: white;
-	font-weight: 300;
+	font-weight: 600;
 }
