--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -1,8 +1,11 @@
+body{
+	font-family: Montserrat;
+}
 .bg-1{
 	background-color: #2dbfd8;
 }
 .jumbotron{
-	
+	padding: 10%;
 }
 .jumbotron h2{
 	color: white;
