modified index.html, custom.css

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -3,7 +3,7 @@
 	background-color: #2dbfd8;
 }
 .jumbotron{
-	padding: 10%;
+	padding: 100px 25px;
 	font-family: Montserrat, sans-serif;
 }
 .jumbotron h2{
