--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -1,12 +1,16 @@
-
+body{
+	font-family: Montserrat, sans-serif;
+}
 .bg-1{
 	background-color: #2dbfd8;
 }
 .jumbotron{
 	padding: 100px 25px;
-	font-family: Montserrat, sans-serif;
 }
 .jumbotron h2{
 	color: white;
 	font-weight: 600;
+}
+.navbar{
+	margin-bottom: 0;
 }
